feat: Add build script for Hyv AI Engine and update dependencies
- Introduced a new build script `build_ai_engine.sh` to automate the building of the Rust canister for the AI engine, including WASM file generation and conversion to IC-compatible format.
- Added a new declaration file `hyv_ai_engine.did` defining the service interface for the AI engine, including types for generation configuration and results.
- Created TypeScript declaration and implementation files for the AI engine, enabling type-safe interactions with the canister.
- Updated the frontend `index.html` to reference the new JavaScript asset for the application.

--- a/src/hyv_ai_engine/Cargo.toml
+++ b/src/hyv_ai_engine/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 ic-cdk = "0.14"
+ic-cdk-macros = "0.9"
 candid = "0.10"
 tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
 ic-stable-structures = "0.6"
