--- a/.ic-assets.json5
+++ b/.ic-assets.json5
@@ -2,12 +2,13 @@
   {
     "match": "**/*",
     "security_policy": {
-      "Content-Security-Policy": "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob:; connect-src 'self' http://localhost:* http://127.0.0.1:* https://icp0.io https://*.icp0.io https://icp-api.io https://openrouter.ai https://api.openrouter.ai https://*.openrouter.ai; img-src 'self' data: blob: https:; font-src 'self' data: https://fonts.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;",
+      "Content-Security-Policy": "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https:; connect-src 'self' http://localhost:* http://127.0.0.1:* https://icp0.io https://*.icp0.io https://icp-api.io https://openrouter.ai https://api.openrouter.ai https://*.openrouter.ai; img-src 'self' data: blob: https:; font-src 'self' data: blob: https://fonts.gstatic.com https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;",
       "X-Frame-Options": "DENY",
       "X-Content-Type-Options": "nosniff",
       "Referrer-Policy": "strict-origin-when-cross-origin",
       "Permissions-Policy": "accelerometer=(), autoplay=(), camera=(), cross-origin-isolated=(), display-capture=(), encrypted-media=(), fullscreen=(), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(self), usb=(), web-share=(), xr-spatial-tracking=()"
-    }
+    },
+    "disable_security_policy_warning": true
   },
   {
     "match": "**/*.js",
